# MattsGameEngine-GL-Dependencies

./: .gitmodules  CMakeLists.txt  CMakeLists.txt~  README.md
GLAD/: CMakeLists.txt  LICENSE.txt
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
